fix nav and header on mobile screen display

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,7 @@
 
 html,
 body {
+    overflow-x: hidden;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
         Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
@@ -108,6 +109,11 @@ nav button:hover {
     box-shadow: 0 8px 15px rgba(0, 0, 0, .2);
 }
 
+.btn-nav img{
+    display: none;
+}
+
+
 /*------------------------------------------- header ------------------------------------------------*/
 header {
     height: 454px;
@@ -126,27 +132,33 @@ header {
     align-self: flex-end;
 }
 
-.contenedor-central {
+.-texto {
     align-content: center;
     text-align: center;
     color: white;
 }
 
-.contenedor-central h1 {
+.contenedor-central-texto h1 {
     font-size: 56px;
     font-weight: 800;
     padding-bottom: 30px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #fff;
 }
 
-.contenedor-central p {
+.contenedor-central-texto p {
     font-size: 20px;
-    white-space: pre-line;
+    
+    color: #fff;
 }
 
 .contenedor-botones {
     display: flex;
     justify-content: center;
+}
+
+.texto-btn-movil{
+    display: none;
 }
 
 .boton-izquierda {
@@ -414,4 +426,88 @@ footer li {
     line-height: 24px;
     transition: all .2s;
     border: none;
+}
+
+/*<----------MOBILE---------------->*/
+
+
+@media only screen and (min-width:350px) and (max-width:480px){
+
+/*<----------nav---------------->*/  
+
+nav{
+    padding: 0px 20px;
+    justify-content: space-between;
+
+}
+    .nav-subpaginas{
+        display: none;
+    }
+
+    .btn-nav button{
+        display: none;
+    }
+
+    .btn-nav img{
+        display: block;
+    }
+/*<----------header---------------->*/ 
+
+header{
+    display: flex;
+    flex-direction: column;
+    background-image: none;
+    height: 100%;
+}
+.contenedor-central-texto{
+    
+    padding: 40px 40px 0px ;
+}
+
+.contenedor-central-texto h1{
+    font-size: 24px;
+}
+
+.contenedor-central-texto p{
+    font-size: 14px;
+    line-height: 1.5;
+    padding: 0px 10px 0px 0px ;
+}
+
+.imagen-header-izquierda{
+    order: 2;
+    margin-top: -8px;
+    
+}
+.imagen-header-izquierda img{
+   
+width: 95%;
+margin: 0px -30px;
+    
+}
+
+.contenedor-botones{
+    justify-content: center;
+   z-index: 2;
+   gap:20px;
+   padding-top:20px;
+}
+.texto-btn-escritorio{
+    display: none;
+}
+.texto-btn-movil{
+    display: inline;
+}
+.boton-izquierda{
+    align-items: center;
+    margin: 0;
+}
+.boton-derecha {
+    content: "Abrir Discord";
+    margin: 0;
+    
+}
+.imagen-header-derecha{
+    display: none;
+}
 }
